@@ -7,8 +7,8 @@ package edu.wpi.first.wpilibj;
 import static org.junit.Assert.assertEquals;
 
 import edu.wpi.first.wpilibj.test.AbstractComsSetup;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.logging.Logger;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -38,7 +38,7 @@ public class BuiltInAccelerometerTest extends AbstractComsSetup {
   /** Test with all valid ranges to make sure unpacking is always done correctly. */
   @Parameters
   public static Collection<BuiltInAccelerometer.Range[]> generateData() {
-    return Arrays.asList(
+    return List.of(
         new BuiltInAccelerometer.Range[][] {
           {BuiltInAccelerometer.Range.k2G},
           {BuiltInAccelerometer.Range.k4G},
