@@ -20,7 +20,6 @@ import edu.wpi.first.wpilibj.motorcontrol.Talon;
 import edu.wpi.first.wpilibj.motorcontrol.Victor;
 import java.io.PrintStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -53,13 +52,14 @@ public final class TestBench {
   public static final int DIOCrossConnectA1 = 6;
 
   /** The Singleton instance of the Test Bench. */
+  @SuppressWarnings("unused")
   private static TestBench instance = null;
 
   /**
    * The single constructor for the TestBench. This method is private in order to prevent multiple
    * TestBench objects from being allocated.
    */
-  protected TestBench() {}
+  private TestBench() {}
 
   /**
    * Constructs a new set of objects representing a connected set of Talon controlled Motors and an
@@ -68,7 +68,7 @@ public final class TestBench {
    * @return a freshly allocated Talon, Encoder pair
    */
   public static MotorEncoderFixture<Talon> getTalonPair() {
-    return new MotorEncoderFixture<Talon>() {
+    return new MotorEncoderFixture<>() {
       @Override
       protected Talon giveMotorController() {
         return new Talon(kTalonChannel);
@@ -98,7 +98,7 @@ public final class TestBench {
    * @return a freshly allocated Victor, Encoder pair
    */
   public static MotorEncoderFixture<Victor> getVictorPair() {
-    return new MotorEncoderFixture<Victor>() {
+    return new MotorEncoderFixture<>() {
       @Override
       protected Victor giveMotorController() {
         return new Victor(kVictorChannel);
@@ -128,7 +128,7 @@ public final class TestBench {
    * @return a freshly allocated Jaguar, Encoder pair
    */
   public static MotorEncoderFixture<Jaguar> getJaguarPair() {
-    return new MotorEncoderFixture<Jaguar>() {
+    return new MotorEncoderFixture<>() {
       @Override
       protected Jaguar giveMotorController() {
         return new Jaguar(kJaguarChannel);
@@ -190,9 +190,9 @@ public final class TestBench {
 
   /** Gets two lists of possible DIO pairs for the two pairs. */
   private static List<List<Integer[]>> getDIOCrossConnect() {
-    List<List<Integer[]>> pairs = new ArrayList<List<Integer[]>>();
+    List<List<Integer[]>> pairs = new ArrayList<>();
     List<Integer[]> setA =
-        Arrays.asList(
+        List.of(
             new Integer[][] {
               {DIOCrossConnectA1, DIOCrossConnectA2},
               {DIOCrossConnectA2, DIOCrossConnectA1}
@@ -200,7 +200,7 @@ public final class TestBench {
     pairs.add(setA);
 
     List<Integer[]> setB =
-        Arrays.asList(
+        List.of(
             new Integer[][] {
               {DIOCrossConnectB1, DIOCrossConnectB2},
               {DIOCrossConnectB2, DIOCrossConnectB1}
@@ -252,7 +252,7 @@ public final class TestBench {
    * @return pairs of DIOCrossConnectFixtures
    */
   public static Collection<Integer[]> getDIOCrossConnectCollection() {
-    Collection<Integer[]> pairs = new ArrayList<Integer[]>();
+    Collection<Integer[]> pairs = new ArrayList<>();
     for (Collection<Integer[]> collection : getDIOCrossConnect()) {
       pairs.addAll(collection);
     }
@@ -267,7 +267,7 @@ public final class TestBench {
    */
   private static Collection<Integer[]> getPairArray(
       List<Integer[]> listA, List<Integer[]> listB, boolean flip) {
-    Collection<Integer[]> encoderPortPairs = new ArrayList<Integer[]>();
+    Collection<Integer[]> encoderPortPairs = new ArrayList<>();
     for (Integer[] portPairsA : listA) {
       Integer[] inputs = new Integer[5];
       inputs[0] = portPairsA[0]; // InputA
@@ -279,7 +279,7 @@ public final class TestBench {
         inputs[4] = flip ? 0 : 1; // The flip bit
       }
 
-      ArrayList<Integer[]> construtorInput = new ArrayList<Integer[]>();
+      ArrayList<Integer[]> construtorInput = new ArrayList<>();
       construtorInput.add(inputs);
 
       inputs = inputs.clone();
@@ -300,7 +300,7 @@ public final class TestBench {
    * @return A collection of different input pairs to use for the encoder
    */
   public static Collection<Integer[]> getEncoderDIOCrossConnectCollection() {
-    Collection<Integer[]> encoderPortPairs = new ArrayList<Integer[]>();
+    Collection<Integer[]> encoderPortPairs = new ArrayList<>();
     assert getDIOCrossConnect().size() == 2;
     encoderPortPairs.addAll(
         getPairArray(getDIOCrossConnect().get(0), getDIOCrossConnect().get(1), false));
